--- a/Resources/Config.ini
+++ b/Resources/Config.ini
@@ -2,6 +2,5 @@
 width = 3840
 height = 2160
 bit_rate = 10M
-preset = slow
 codec = hevc_amf
-shader = Anime4k-ModeA+A-UL.glsl
+shader = Anime4K_ModeA+A+UL.glsl
